<resources>
    <string name="app_name">Moneta</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Поиск</string>
    <string name="logo">logo</string>
    <string name="search_button">search button</string>
    <string name="define_button">define button</string>
    <string name="collection_button">collection button</string>
    <string name="ml">*ML еще не совершенен, рекомендуем сверять данные</string>
    <string name="Rubel_5">5 рублей</string>
    <string name="remove">Убрать</string>
    <string name="save">Сохранить</string>
    <string name="add">добавить</string>
    <string name="nominal">Номинал</string>
    <string name="R5">5 рублей</string>
    <string name="condition">Состояние</string>
    <string name="stamp">Штемпль</string>
    <string name="kant">Кант:</string>
    <string name="gurt">Гурт:</string>
    <string name="magnet">Магнитная:</string>
    <string name="price">Примерная цена:</string>
    <string name="year">Год:</string>
    <string name="pricex2">Ваша цена:</string>
    <string name="yearhint">2021</string>
    <string name="smooth">гладкий</string>


    <string-array name="coins">
        <item>1 Рубль</item>
        <item>2 Рубля</item>
        <item>5 Рублей</item>
        <item>10 Рублей </item>
    </string-array>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>Float</item>
    </string-array>

    <string name="device">Device:</string>
    <string name="warnlogin">*Пожалуйста будьте терпеливы, намите и ожидайте входа. Запрос обрабатывается на удаленном сервере.</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>